会员列表导出

--- a/weapp/apps/customerized_apps/rebate/templates/editor/rebate_participances.html
+++ b/weapp/apps/customerized_apps/rebate/templates/editor/rebate_participances.html
@@ -193,7 +193,8 @@ $(document).ready(function() {
 		dateViewReload();
 	});
 	$('.xa-export').click(function(){
-		// 导出
+		var url = '/apps/rebate/rebate_participances_export/?export_id=1'
+  		window.open(url);
 	});
 
 	function dateViewReload(){
