--- a/weapp/apps/customerized_apps/rebate/templates/editor/rebate_order_list.html
+++ b/weapp/apps/customerized_apps/rebate/templates/editor/rebate_order_list.html
@@ -66,7 +66,8 @@
 			<div class="xui-btn-group fr">
 				<a class="btn btn-primary xa-search xui-fontBold ml60" href="javascript:void(0);">查询</a>
 				<a class="xa-reset btn btn-primary xui-fontBold" href="javascript:void(0);">重置</a>
-				<a class="xa-export btn btn-default xui-export ml40" href="javascript:void(0);">导出</a>
+				<a class="xa-export btn btn-default xui-export xa-export ml40" href="javascript:void(0);">导出</a>
+				<a id="export_href" style="display: none ">DownloadXLS</a>				
 			</div>
 		</div>
 		<div class="xui-i-item" style="margin-top: -15px;">
@@ -278,6 +279,48 @@ $(document).ready(function() {
 		dataView.reload();
 	}
 
+	$('.xa-export').click(function(){
+		W.getLoadingView();
+        var record_id = '{{ record_id }}';
+		var start_date = $('#start_date').val();
+		var end_date = $('#end_date').val();
+		var start_money = $('#start_money').val();
+		var end_money = $('#end_money').val();	
+		var is_first_order = $("input[type='radio']:checked").val();	
+		var is_checked = $('.is_show').is(':checked');
+		var is_show = 0;
+		if (is_checked == true){
+			is_show = 1;
+		}		
+		W.getApi().call({
+			method : 'get',
+			app: 'apps/rebate',
+			resourse: 'rebate_order_export',
+			args : {
+				'is_first_order': is_first_order,
+				'is_show': is_show,
+				'start_date': start_date,
+				'end_date': end_date,
+				'start_money': start_money,
+				'end_money': end_money,
+				'export_id': 1,
+                'record_id': record_id				
+			}
+			success: function(resp){
+				if(resp.code == 200){
+					$('#export_href').prop({
+						'href': resp.download_path,
+						'download': resp.filename
+					}).get(0).click();
+
+				}
+				console.log("导出成功");
+			},
+			error: function(error){
+				console.log('导出失败');
+			}			
+		});
+	});
 	$('.xa-search').click(function(){
         if (!W.validate()) {
         	W.showHint('error','请输入正确金额或下单时间');
