--- a/weapp/apps/customerized_apps/rebate/templates/editor/create_rebate_rule.html
+++ b/weapp/apps/customerized_apps/rebate/templates/editor/create_rebate_rule.html
@@ -181,7 +181,7 @@
       <div class="controls ml20 tc">
         {% ifequal rebate_rule.status 2%}
         {% else %}
-          <a class="btn btn-primary xa-submit mr80">{% if not rebate_rule %}保&nbsp;存{% else %}编&nbsp;辑{% endif %}</a>
+          <a class="btn btn-primary xa-submit mr80">保&nbsp;存</a>
         {% endifequal %}
       </div>
     </div>
