--- a/weapp/apps/customerized_apps/rebate/templates/editor/rebate_order_list.html
+++ b/weapp/apps/customerized_apps/rebate/templates/editor/rebate_order_list.html
@@ -61,8 +61,8 @@
 			    data-format="yy-mm-dd"
 			    data-max="now"
 			    data-min-el="#start_date"/>
-			<input type="radio" value="1" class="vs ml30" name="firstOrder"  checked="checked">&nbsp;首单
-			<input type="radio" value="0" class="vs ml30" name="firstOrder">&nbsp;非首单
+			<input type="checkbox" class="vs ml30" name="firstOrder">&nbsp;首单
+			<input type="checkbox" class="vs ml30" name="NotfirstOrder">&nbsp;非首单
 			<div class="xui-btn-group fr">
 				<a class="btn btn-primary xa-search xui-fontBold ml60" href="javascript:void(0);">查询</a>
 				<a class="xa-reset btn btn-primary xui-fontBold" href="javascript:void(0);">重置</a>
@@ -266,14 +266,21 @@ $(document).ready(function() {
 		var end_date = $('#end_date').val();
 		var start_money = $('#start_money').val();
 		var end_money = $('#end_money').val();	
-		var is_first_order = $("input[type='radio']:checked").val();	
+		var is_first_order = false;
+		var not_first_order = false;
+		if($("input[name='firstOrder']").is(':checked')){
+			is_first_order = true;
+		}
+		if($("input[name='NotfirstOrder']").is(':checked')){
+			not_first_order = true;
+		}	
 		var is_checked = $('.is_show').is(':checked');
 		var dataView = $('[data-ui-role="qrcode-order-advanced-table"]').data('view');
 		var is_show = 0;
 		if (is_checked == true){
 			is_show = 1;
 		}
-		var args= '{"start_date":"'+start_date+'","end_date":"'+end_date+'","start_money":"'+start_money+'","end_money":"'+end_money+'","is_show":"'+is_show+'","is_first_order":"'+is_first_order+'"}';
+		var args= '{"start_date":"'+start_date+'","end_date":"'+end_date+'","start_money":"'+start_money+'","end_money":"'+end_money+'","is_show":"'+is_show+'","is_first_order":"'+is_first_order+'","not_first_order":"'+not_first_order+'"}';
 		dataView.options.args = args;
 	    dataView.setPage(1);
 		dataView.reload();
@@ -286,7 +293,14 @@ $(document).ready(function() {
 		var end_date = $('#end_date').val();
 		var start_money = $('#start_money').val();
 		var end_money = $('#end_money').val();	
-		var is_first_order = $("input[type='radio']:checked").val();	
+		var is_first_order = false;
+		var not_first_order = false;
+		if($("input[name='firstOrder']").is(':checked')){
+			is_first_order = true;
+		}
+		if($("input[name='NotfirstOrder']").is(':checked')){
+			not_first_order = true;
+		}	
 		var is_checked = $('.is_show').is(':checked');
 		var is_show = 0;
 		if (is_checked == true){
@@ -298,6 +312,7 @@ $(document).ready(function() {
 			resourse: 'rebate_order_export',
 			args : {
 				'is_first_order': is_first_order,
+				'not_first_order': not_first_order,
 				'is_show': is_show,
 				'start_date': start_date,
 				'end_date': end_date,
@@ -305,14 +320,13 @@ $(document).ready(function() {
 				'end_money': end_money,
 				'export_id': 1,
                 'record_id': record_id				
-			}
+			},
 			success: function(resp){
 				if(resp.code == 200){
 					$('#export_href').prop({
 						'href': resp.download_path,
 						'download': resp.filename
 					}).get(0).click();
-
 				}
 				console.log("导出成功");
 			},
