--- a/weapp/apps/customerized_apps/rebate/templates/editor/rebates.html
+++ b/weapp/apps/customerized_apps/rebate/templates/editor/rebates.html
@@ -17,67 +17,14 @@
 		</ul>
 	</div>
 
-	<div class="xui-filterPanel mb15">
-		<div class="xui-form disT">
-			<div class="xui-col disTc">
-				<div class="xui-i-item">
-					<label class="">活动名称：</label>
-					<input type="text" class="form-control" id="name" name="name" value="" />
-				</div>
-			</div>
-			<div class="xui-col disTc">
-				<div class="xui-i-item ml20">
-					<label>状态：</label>
-					<select class="" id="status" name="status">
-						<option value="-1">全部</option>
-						<option value="0">未开始</option>
-						<option value="1">进行中</option>
-						<option value="2">已结束</option>
-					</select>
-				</div>
-			</div>
-			<div class="xui-col disTc">
-				<div class="xui-i-item">
-					<label>活动时间
-					：</label>
-					<input
-						type="text"
-						class="form-control xui-datePicker"
-						id="start_time"
-						name="start_time"
-						style=""
-					    value=""
-					    readonly="readonly"
-						data-enable-select-time="true"
-						data-validate="require-notempty"
-						data-ui-role="date-picker"
-					    data-format="yy-mm-dd HH:MM" />
-					至
-					<input
-						type="text"
-						class="form-control xui-datePicker"
-						id="end_time"
-						name="end_time"
-					    value=""
-					    readonly="readonly"
-					    data-enable-select-time="true"
-						data-validate="require-notempty"
-						data-ui-role="date-picker"
-					    data-format="yy-mm-dd HH:MM"
-					    data-min-el="#start_time"/>
-				</div>
-			</div>
-		</div>
-		<div class="xui-btn-group">
-			<a class="btn btn-primary mr40 xa-search xui-fontBold" href="javascript:void(0);">查&nbsp;&nbsp;&nbsp;询</a>
-			<a class="btn btn-default xa-reset xui-fontBold" href="javascript:void(0);">重&nbsp;&nbsp;&nbsp;置</a>
-		</div>
-	</div>
-
 	<div class="panel panel-default xui-tableBox">
 		<div class="panel-header clearfix">
-			<a href="/apps/rebate/rebate/" class="btn btn-success fr">
-				<span class="xui-plusBoldermr5 xui-plus-sign pr" style="">+</span> 新建返利活动
+			<div class="fr" style="margin-top: 2px;">
+				<input class="xui-searchInput  w250 xa-search-title h30" type="text"><a class="xui-searchBtn btn btn-default xa-searchBtn xa-search h30 ml0 mr5" style="min-width:50px!important;background: #f2f2f2;border-left-width: 0px; border-radius:0px;">搜索</a>
+			</div>
+			<a class="btn btn-default lh20 xui-i-btnWidth xa-exportQrcode fr mr20" href="javascript:void(0);" style="width:100px!important;">导出</a>
+			<a href="/apps/rebate/rebate/" class="btn btn-success fr lh20 xui-i-btnWidth mr10">
+				<span class="xui-add-btn-icon">+</span>新建返利活动
 			</a>
 		</div>
 		<div
