--- a/weapp/templates/base_v2.html
+++ b/weapp/templates/base_v2.html
@@ -241,7 +241,7 @@
 								'" title="' + firstNav.title + '">' + 
 								firstNav.title + '</a>'+ className + '</li>');
 						} else {
-							if(firstNav.title === '粉丝招募平台') {
+							if(firstNav.title === '商机挖掘监控系统') {
 								$('.xa-first-navs').append('<li class="pr xui-i-bigDataTab"><a target="_blank"' + 
 									' href="' + firstNav.url + 
 									'?token={{token}}" title="' + firstNav.title + '">' + 
