--- a/weapp/apps/customerized_apps/rebate/templates/editor/rebate_order_list.html
+++ b/weapp/apps/customerized_apps/rebate/templates/editor/rebate_order_list.html
@@ -226,7 +226,7 @@
 					</td>
 					<td class="nowrap" width="90">
 						<div>
-	                        {{html formatOrderStatus(order.status)}}
+	                        ${order.status}
 						</div>
 					</td>
 				</tr>
