百宝箱高级投票需求变更

--- a/weapp/apps/customerized_apps/shvote/templates/editor/shvote_registrators.html
+++ b/weapp/apps/customerized_apps/shvote/templates/editor/shvote_registrators.html
@@ -103,6 +103,7 @@
 		<thead>
 			<tr>
 				<th>选手</th>
+				<th>分组</th>
 				<th>票数</th>
 				<th>编号</th>
 				<th>状态</th>
@@ -121,6 +122,9 @@
 					${item.name}
 				</td>
 				<td>
+					${item.group}
+				</td>
+				<td>
 					${item.count}
 				</td>
 				<td>
@@ -133,7 +137,6 @@
 					{{if (item.status === 1)}}
 						审核通过
 					{{/if}}
-
 				</td>
 				<td>
 					${item.created_at}
