--- a/weapp/market_tools/tools/card_exchange/templates/card_exchange/webapp/m_card_exchange_list.html
+++ b/weapp/market_tools/tools/card_exchange/templates/card_exchange/webapp/m_card_exchange_list.html
@@ -161,6 +161,12 @@
     	border-right: 1px solid #f5f5f5;
     	font-size: 1rem;
     	text-align: center;
+       	display: inline-block;
+    	width: 50%;
+    	font-family: "黑体";
+    	box-sizing: border-box;
+    	background-color: #fff;
+    	color: #000;
     }
     h1{
     	text-align: center;
@@ -318,9 +324,10 @@
 </div>
 <div data-role="page" data-theme="x" class="xui-detail-wrapper">
 	<div data-role="content" data-theme="x">
+	
 		<div class="xui-notBind">
 			<div class="xui-tab">
-				<div class="xui-tab-normal"><a>微众卡余额查询</a></div>
+				<a class="xui-tab-normal" href="./?module=market_tool:weizoom_card&model=weizoom_card_login&action=get&workspace_id=market_tool:weizoom_card&webapp_owner_id={{request.webapp_owner_id}}&project_id=0">微众卡余额查询</a>
 				<div class="xui-tab-active">微众卡钱包</div>
 			</div>
 			<h1>微众卡钱包</h1>
@@ -337,7 +344,9 @@
 				<div>
 			</div>
 		</div>
-		<!-- <div class="xui-header">
+
+
+		<div class="xui-header">
 			<div class="xui-header-left">
 				<div class="xui-text xui-remain">账户余额</div>
 					<div>
@@ -437,7 +446,8 @@
 				{% endfor %}
 		    </div>
 		    {% endif %}
-	    </div> -->
+	    </div>
+
     </div>
 </div>
 {% endblock %}
