--- a/weapp/market_tools/tools/weizoom_card/templates/weizoom_card/webapp/weizoom_card_login.html
+++ b/weapp/market_tools/tools/weizoom_card/templates/weizoom_card/webapp/weizoom_card_login.html
@@ -24,9 +24,15 @@
     	border-bottom: 2px solid #cf0404;
     }
     .xui-tab-normal{
+    	width: 50%;
+    	font-family: "黑体";
+    	box-sizing: border-box;
+    	background-color: #fff;
+    	display: inline-block;
     	border-left: 1px solid #f5f5f5;
     	font-size: 1rem;
     	text-align: center;
+    	color: #000;
     }	
 </style>
 {% endblock %}
@@ -35,7 +41,8 @@
 <div class="xui-wzcoinPay-page xui-page">
 	<div class="xui-tab">
 		<div class="xui-tab-active">微众卡余额查询</div>
-		<div class="xui-tab-normal"><a>微众卡钱包<a></div>
+		<a class="xui-tab-normal" href="./?module=market_tool:weizoom_card&model=weizoom_card_exchange_list&action=get&workspace_id=market_tool:weizoom_card&webapp_owner_id={{request.webapp_owner_id}}&project_id=0&is_wallet=1
+">微众卡钱包</a>
 	</div>
 	<div class="xui-container p30">
     	<form class="xui-form" method="post" action="" id="editForm">
