待售、在售商品列表按总销量排序功能，只为微众商城开放

--- a/weapp/static_v2/css/mall_product.css
+++ b/weapp/static_v2/css/mall_product.css
@@ -1271,6 +1271,10 @@
 	bottom: 0;
 	right: 0;
 }
+
+.xui-productsPage .xui-Blue{
+	color: #1262b7!important;
+}
 /*在售商品管理，多规格修改商品价钱弹窗*/
 .xui-updateProductModelPriceDialog .modal-dialog{
 	width: 500px;
