--- a/weapp/mall/templates/mall/editor/edit_product.html
+++ b/weapp/mall/templates/mall/editor/edit_product.html
@@ -581,7 +581,7 @@ $('.xa-selectImage').click(function(){return false;})
 	$(document).ready(function() {
 
 		/*微众商城需求start 多规格开启*/
-		var webapp_id = '{{webapp_id}}';
+		var username = '{{request.user.username}}';
 		/*微众商城需求end*/
 
 		var view = new W.view.mall.ProductEditor({
@@ -597,7 +597,7 @@ $('.xa-selectImage').click(function(){return false;})
 			}
 
 			/*微众商城需求start 多规格开启 当webapp_id 非微众商城时，多规格按钮隐藏*/
-			if(webapp_id != '3394'){
+			if(username != 'weshop'){
 				$div.hide();
 			}
 			/*微众商城需求end*/
