--- a/weapp/mall/templates/mall/editor/offshelf_products.html
+++ b/weapp/mall/templates/mall/editor/offshelf_products.html
@@ -82,7 +82,7 @@
 				<th width="100">分组</th>
 				<th width="105">商品价格（元）</th>
 				<th width="50">库存</th>
-				<th width="50">总销量</th>
+				<th width="50" {{if data.data.username=="weshop"}}class="tx_sortable xui-Blue" data-sort-attr='sales' data-sort-direction="up"{{/if}}>总销量</th>
 				<th width="120">{{if data.data.mall_type == 1 }}同步{{else}}创建{{/if}}时间</th>
 				<th width="110">操作</th>
 			</tr>
