隐藏购物车和排序

--- a/weapp/mall/templates/mall/editor/config_product_list.html
+++ b/weapp/mall/templates/mall/editor/config_product_list.html
@@ -14,7 +14,7 @@
             <li>
                 <a href="/mall2/outline/">首页</a>
             </li>
-            <li class="active">通用配置</li>
+            <li class="active">通用设置</li>
         </ul>
     </div>
 
@@ -35,7 +35,7 @@
                 </label>
             </div>
         </fieldset>
-        <fieldset >
+        <!-- <fieldset >
             <div class="form-group">
                 <label class="control-label col-sm-2 ml10 pt0 w110">商品排序：</label>
                 <label class="inline">
@@ -46,7 +46,7 @@
 
                 </label>
             </div>
-        </fieldset>
+        </fieldset> -->
         <fieldset >
             <div class="form-group">
                 <label class="control-label col-sm-2 ml10 pt0 w110">商品搜索框：</label>
@@ -58,7 +58,7 @@
                 </label>
             </div>
         </fieldset>
-        <fieldset>
+       <!--  <fieldset>
             <div class="form-group">
                 <label class="control-label col-sm-2 ml10 pt0 w110">购物车：</label>
                 <label class="inline">
@@ -68,7 +68,7 @@
                     <input type="radio" name='shopping_cart' value="0" {% if not mall_config.show_shopping_cart %} checked {% endif %}><b style="vertical-align: text-bottom;font-weight:normal;display:inline-block;">&nbsp;&nbsp;关闭</b>
                 </label>
             </div>
-        </fieldset>
+        </fieldset> -->
         <fieldset>
             <div class="form-group">
                 <label class="control-label col-sm-2 ml10 pt0 w110"></label>
