--- a/weapp/apps/customerized_apps/rebate/templates/editor/rebates.html
+++ b/weapp/apps/customerized_apps/rebate/templates/editor/rebates.html
@@ -20,7 +20,7 @@
 	<div class="panel panel-default xui-tableBox">
 		<div class="panel-header clearfix">
 			<div class="fr" style="margin-top: 2px;">
-				<input class="xui-searchInput  w250 xa-search-title h30" type="text"><a class="xui-searchBtn btn btn-default xa-searchBtn xa-search h30 ml0 mr5" style="min-width:50px!important;background: #f2f2f2;border-left-width: 0px; border-radius:0px;">搜索</a>
+				<input type="text" class="xui-searchInput w250 h30" id="name" name="name" value="" /><a class="xui-searchBtn btn btn-default xa-search h30 ml0 mr5" style="min-width:50px!important;background: #f2f2f2;border-left-width: 0px; border-radius:0px;">搜索</a>
 			</div>
 			<a class="btn btn-default lh20 xui-i-btnWidth xa-exportQrcode fr mr20" href="javascript:void(0);" style="width:100px!important;">导出</a>
 			<a href="/apps/rebate/rebate/" class="btn btn-success fr lh20 xui-i-btnWidth mr10">
@@ -197,28 +197,16 @@ $(document).ready(function() {
 
 	$('.xa-search').click(function(event) {
 		var name = $.trim($('[name="name"]').val());
-		var status = $.trim($('[name="status"]').val());
-		var startTime = $.trim($('[name="start_time"]').val());
-		var endTime = $.trim($('[name="end_time"]').val());
-		var redPacketType = $.trim($('[name="rebate_type"]').val());
 		table.reload({
-			name: name,
-			status: status,
-			start_time: startTime,
-			end_time: endTime,
-			rebate_type: redPacketType
+			name: name
 		}, {
 			emptyDataHint: '没有符合条件的数据'
 		});
 	});
 
-	$('.xa-reset').click(function(event) {
-		$('[name="name"]').val('');
-		$('[name="status"]').val('-1');
-		$('[name="start_time"]').val('');
-		$('[name="end_time"]').val('');
-		$('[name="rebate_type"]').val('all');
-	});
+//	$('.xa-reset').click(function(event) {
+//		$('[name="name"]').val('');
+//	});
 
 });
 </script>
