--- a/weapp/apps/customerized_apps/rebate/templates/editor/rebates.html
+++ b/weapp/apps/customerized_apps/rebate/templates/editor/rebates.html
@@ -22,7 +22,8 @@
 			<div class="fr" style="margin-top: 2px;">
 				<input type="text" class="xui-searchInput w250 h30" id="name" name="name" value="" /><a class="xui-searchBtn btn btn-default xa-search h30 ml0 mr5" style="min-width:50px!important;background: #f2f2f2;border-left-width: 0px; border-radius:0px;">搜索</a>
 			</div>
-			<a class="btn btn-default lh20 xui-i-btnWidth xa-exportQrcode fr mr20" href="javascript:void(0);" style="width:100px!important;">导出</a>
+			<a class="btn btn-default lh20 xui-i-btnWidth xa-export fr mr20" href="javascript:void(0);" style="width:100px!important;">导出</a>
+			<a id="export_href" style="display: none ">DownloadXLS</a>
 			<a href="/apps/rebate/rebate/" class="btn btn-success fr lh20 xui-i-btnWidth mr10">
 				<span class="xui-add-btn-icon">+</span>新建返利活动
 			</a>
@@ -204,9 +205,31 @@ $(document).ready(function() {
 		});
 	});
 
-//	$('.xa-reset').click(function(event) {
-//		$('[name="name"]').val('');
-//	});
+	$('.xa-export').click(function(){
+		W.getLoadingView();
+		var name = $('#name').val();
+		W.getApi().call({
+			method: 'get',
+			app: 'apps/rebate',
+			resource: 'rebates_export',
+			args: {
+				'is_export': 'is_export',
+				'name': name
+			},
+			success: function(resp){
+				if(resp.code == 200){
+					$('#export_href').prop({
+						'href': resp.download_path,
+						'download': resp.filename
+					}).get(0).click();
+				}
+				console.log("导出成功");
+			},
+			error: function(error){
+				console.log('导出失败');
+			}
+		});
+	});
 
 });
 </script>
