弹框关闭按钮修复

--- a/weapp/market_tools/tools/card_exchange/templates/card_exchange/webapp/m_card_exchange_list.html
+++ b/weapp/market_tools/tools/card_exchange/templates/card_exchange/webapp/m_card_exchange_list.html
@@ -223,7 +223,7 @@
     	background: rgba(0,0,0,0.5);
     	position: fixed;
     	z-index: 999;
-    	/*display: none;*/
+    	display: none;
     }
     .xui-code{
     	background: #fff;
