--- a/weapp/static_v2/js/view/mall_product_filter_view/template.html
+++ b/weapp/static_v2/js/view/mall_product_filter_view/template.html
@@ -96,6 +96,7 @@
 </div>
 <div class="xui-btn-group">
 	<a class="btn btn-primary mr40 xa-search xui-fontBold" href="javascript:void(0);">查询</a>
-	<a class="btn btn-default xa-reset xui-fontBold" href="javascript:void(0);">重置</a>
+	<a class="btn btn-default xa-reset xui-fontBold mr40" href="javascript:void(0);">重置</a>
+	<a class="btn btn-default xa-export xui-fontBold" href="javascript:void(0);">导出商品</a>
 </div>
 </script>
