--- a/weapp/apps/customerized_apps/shvote/templates/editor/shvotes.html
+++ b/weapp/apps/customerized_apps/shvote/templates/editor/shvotes.html
@@ -100,7 +100,7 @@
 		<thead>
 			<tr>
 				<th>活动名称</th>
-				<th>投票人数</th>
+				<th>投票次数</th>
 				<th>报名人数</th>
 				<th>开始时间</th>
 				<th>结束时间</th>
