--- a/weapp/apps/customerized_apps/lottery/templates/webapp/m_lottery.html
+++ b/weapp/apps/customerized_apps/lottery/templates/webapp/m_lottery.html
@@ -224,7 +224,8 @@
                 this.$closeBtn.show();
             }else if(prize_type == 'none'){
                 this.$title.html('很遗憾').show();
-                this.$contentHeader.html("奖品已抽光,下次请早点来!");
+                //this.$contentHeader.html("奖品已抽光,下次请早点来!");
+                this.$contentHeader.html("没有中奖，再接再厉吧~");
                 this.$userCenter.hide();
                 this.$closeBtn.show();
             }else if(prize_type == 'coupon' || prize_type == 'integral'){
