后台系统显示排序设置

--- a/weapp/mall/templates/mall/editor/config_product_list.html
+++ b/weapp/mall/templates/mall/editor/config_product_list.html
@@ -35,7 +35,7 @@
                 </label>
             </div>
         </fieldset>
-        <!-- <fieldset >
+        <fieldset >
             <div class="form-group">
                 <label class="control-label col-sm-2 ml10 pt0 w110">商品排序：</label>
                 <label class="inline">
@@ -46,7 +46,7 @@
 
                 </label>
             </div>
-        </fieldset> -->
+        </fieldset>
         <fieldset >
             <div class="form-group">
                 <label class="control-label col-sm-2 ml10 pt0 w110">商品搜索框：</label>
