--- a/weapp/apps/customerized_apps/rebate/templates/editor/rebate_order_list.html
+++ b/weapp/apps/customerized_apps/rebate/templates/editor/rebate_order_list.html
@@ -309,7 +309,7 @@ $(document).ready(function() {
 		W.getApi().call({
 			method : 'get',
 			app: 'apps/rebate',
-			resourse: 'rebate_order_export',
+			resource: 'rebate_order_export',
 			args : {
 				'is_first_order': is_first_order,
 				'not_first_order': not_first_order,
