--- a/weapp/apps/customerized_apps/rebate/templates/editor/rebate_order_list.html
+++ b/weapp/apps/customerized_apps/rebate/templates/editor/rebate_order_list.html
@@ -72,8 +72,8 @@
 		</div>
 		<div class="xui-i-item" style="margin-top: -15px;">
 			<label>实付金额</label>
-			<input type="text" class="ml13 mr10 xui-money" id="start_money" data-validate="require-notempty,,require-float">
-			<input type="text" class="xui-money" id="end_money"data-validate="require-notempty,,require-float">
+			<input type="text" class="ml13 mr10 xui-money" id="start_money" >
+			<input type="text" class="xui-money" id="end_money" >
 		</div>
 	</div>
 </div>
@@ -336,16 +336,25 @@ $(document).ready(function() {
 		});
 	});
 	$('.xa-search').click(function(){
-        if (!W.validate()) {
-        	W.showHint('error','请输入正确金额或下单时间');
-          	return false;
-        }
-		var s_money = parseFloat($('#start_money').val());
-		var e_money = parseFloat($('#end_money').val());	
-        if(s_money > e_money){
-            W.showHint('error','请输入正确金额');
-            return false;
-        }
+		var start_date = $('#start_date').val();
+		var end_date = $('#end_date').val();
+		var start_money = $.trim($('#start_money').val());
+		var end_money = $.trim($('#end_money').val());	
+		if(start_date||end_date){
+	        if (!W.validate()) {
+	        	W.showHint('error','请输入下单时间');
+	          	return false;
+	        }
+	    }
+		if(start_money||end_money){
+			if(!(start_money && end_money)){
+	        	W.showHint('error','请输入实付金额');
+	          	return false;
+	        }else if(parseFloat(start_money)>parseFloat(end_money)){
+	        	W.showHint('error','请输入正确金额');
+	          	return false;
+	        }
+	    }
 		dateViewReload();
 	});
 	$('.xa-reset').click(function(){
