--- a/weapp/apps/customerized_apps/rebate/templates/editor/rebate_participances.html
+++ b/weapp/apps/customerized_apps/rebate/templates/editor/rebate_participances.html
@@ -183,6 +183,14 @@ $(document).ready(function() {
 	$('#end_date').attr('value','');
 
 	$('.xa-search').click(function(){
+		var start_date = $('#start_date').val();
+		var end_date = $('#end_date').val();
+		if(start_date||end_date){
+	        if (!W.validate()) {
+	        	W.showHint('error','请输入下单时间');
+	          	return false;
+	        }
+	    }		
 		dateViewReload();
 	});
 	$('.xa-reset').click(function(){
