通用配置开启购物车

--- a/weapp/mall/templates/mall/editor/config_product_list.html
+++ b/weapp/mall/templates/mall/editor/config_product_list.html
@@ -58,7 +58,7 @@
                 </label>
             </div>
         </fieldset>
-       <!--  <fieldset>
+        <fieldset>
             <div class="form-group">
                 <label class="control-label col-sm-2 ml10 pt0 w110">购物车：</label>
                 <label class="inline">
@@ -76,7 +76,7 @@
                 开启后，买家可以在商品列表直接将商品“加入购物车”。
                 </label>
             </div>
-        </fieldset> -->
+        </fieldset>
         <input type="submit" class="btn xui-submit xa-submit btn-primary ml30 mb30" value="保存" />
     </form>
 </div>
