微页面，获取购物车数量js实现； 并去掉 页面渲染时的购物车数量查询

--- a/weapp/templates/global_navbar.html
+++ b/weapp/templates/global_navbar.html
@@ -1,6 +1,7 @@
 {% load workbench_filter %}
 
 {% with global_navbar as component %}
+<!-- 除微页面以外的底部导航，比如 商品列表，个人中心 -->
 <div 
     class="wui-template-globalNavbar"
     data-component-cid="{{component.cid}}" 
