微众卡使用详情

--- a/weapp/apps/customerized_apps/rebate/templates/editor/card_rebate_details.html
+++ b/weapp/apps/customerized_apps/rebate/templates/editor/card_rebate_details.html
@@ -62,7 +62,7 @@
 	        	<a class="btn btn-default xa-export">导 出</a>
         	</form>
         </div>
-        <div class="xa-listView" data-ui-role="advanced-table" data-app="apps/rebate" data-api="card_details" data-template-id="#exchange-detail" data-enable-paginator="true" data-enable-load="true" data-item-count-per-page="15"></div>
+        <div class="xa-listView" data-ui-role="advanced-table" data-app="apps/rebate" data-api="card_details" data-template-id="#exchange-detail" data-args='{"record_id": "{{record_id}}"}' data-enable-paginator="true" data-enable-load="true" data-item-count-per-page="15"></div>
         </div>
     </div>
 </div>
