--- a/weapp/apps/customerized_apps/rebate/templates/editor/rebate_participances.html
+++ b/weapp/apps/customerized_apps/rebate/templates/editor/rebate_participances.html
@@ -29,7 +29,8 @@
 		width: 90px;
 	}
 	.xui-status{
-		padding: 0 5px;
+		padding-left: 5px;
+		border:1px solid #b3b3b3;
 	}
 	.xui-export{
 		width: 100px;
