修改为现金兑换

--- a/weapp/mall/templates/mall/editor/promotion/card_exchange_money.html
+++ b/weapp/mall/templates/mall/editor/promotion/card_exchange_money.html
@@ -146,10 +146,10 @@
 	        	<td>
 	        	    <form>
 		        		<div class="xui-i-exchange xa-exchange">
-		        		    {% for item in card_exchange_dic.prize%}
+		        		    {% for item in card_exchange_dic.prize %}
 		        		    <div class="xui-i-put">
 			        		    <div>
-			        		    	<label>使用积分：</label>
+			        		    	<label>使用现金：</label>
 			        		    	<input type="text" class="xa-integral xui-i-integral xui-hide" name="integral" readonly=true value="{{item.integral}}">
 			        		    	<span class="xa-exchangeSpan">{{item.integral}}</span>
 			        		    </div>
@@ -212,7 +212,7 @@
 		        		<div class="xui-i-exchange xa-exchange">
 		        		    <div class="xui-i-put">
 			        		    <div>
-			        		    	<label>使用积分：</label>
+			        		    	<label>使用现金：</label>
 			        		    	<input type="text" class="xa-integral xui-i-integral" name="integral">
 			        		    	<span class="xa-exchangeSpan"></span>
 			        		    </div>
