--- a/weapp/market_tools/tools/card_exchange_money/templates/card_exchange_money/webapp/m_card_exchange_money.html
+++ b/weapp/market_tools/tools/card_exchange_money/templates/card_exchange_money/webapp/m_card_exchange_money.html
@@ -340,7 +340,7 @@
 <div data-role="page" data-theme="x" class="xui-wzcoinConfirm-page">
 	<div data-role="content" data-theme="x">
 		<div class="xui-section-item">
-			<h3>微众卡兑换平台</h3>
+			<h3>微众卡现金兑换平台</h3>
 			<p>现有积分：<span class="xa-current-integral">{{member_integral}}</span></p>
 		</div>
 		<form action="post" class="xui-exchange-form">
