--- a/weapp/templates/weapp_jssdk_base.html
+++ b/weapp/templates/weapp_jssdk_base.html
@@ -12,7 +12,8 @@
       W.sharePageImg = "http://"+window.location.host+W.sharePageImg;
 
       var link = window.location.href;
-      if (link.indexOf('fmt') === -1){
+
+      if (link.indexOf('fmt') === -1 && link.indexOf("/termite2/webapp_page") === -1){
           if (link.indexOf('&') === -1){
               link = link +"?fmt="+W.curRequestMemberToken;
           } else {
