--- a/weapp/templates/content_base_v2.html
+++ b/weapp/templates/content_base_v2.html
@@ -21,7 +21,7 @@
 					<a href="{{ fans_host }}/auth/account_help/" target="_blank"><i class="xui-toolIcon"></i>权限管理</a>
 					<a href="javascript:void(0);" data-toggle="popover" id="mf"><i class="xui-toolIcon"></i>修改密码</a>
 				{% endif %}
-					<a href="javascript:void(0);" data-toggle="popover" target="_blank" style="margin-right:13px;" id="message_href"><i class="xui-toolIcon"></i>系统通知<i class="xui-noticyTip" style="display:none" id ="message_count"></i></a>
+					<a href="{{ fans_host }}/message/message_list/?from=portal" data-toggle="popover" target="_blank" style="margin-right:13px;" id="message_href"><i class="xui-toolIcon"></i>系统通知<i class="xui-noticyTip" style="display:none" id ="message_count"></i></a>
 
 				{% if request.user.username == 'malla' or request.user.username == 'ceshi01' or request.user.username == 'jobs' %}
 					<a href="{{ fans_host }}/help_center/outline/" target="_blank"><i class="xui-toolIcon"></i>帮助中心</a>
